--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "construction-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5050",
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.10.5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.294.0",
